AQI Data Ingestion ETL.ipynb

--- a/AQI Data Ingestion ETL.ipynb
+++ b/AQI Data Ingestion ETL.ipynb
@@ -81,6 +81,9 @@
    },
    "outputs": [],
    "source": [
+
+    " *************ALL THE COMMENTED PART OF CODE CAN BE IGNORED BECAUSE I USED THEM AS ALTERNATE TO FEW PART OF CODES************* ",
+
     "import requests, json\n",
     "#requests: A powerful third-party Python library used to make HTTP requests (e.g., GET, POST)\n",
     "#json: Python’s built-in module to parse and work with JSON (a common format used by APIs)\n",
@@ -115,6 +118,7 @@
    },
    "outputs": [],
    "source": [
+    "#####  This part of code can be ignored because i ran this code to read data from API but didn't use any exception handling way. so next shell is real code for requesting and reading data from API. #####",
     "# if response.status_code == 200:                #success - status code 200\n",
     "#     data = response.json()                     # storing json data as dictionary\n",
     "\n",
